--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
+
 @import 'tailwindcss';
 @tailwind utilities;
 
@@ -37,20 +39,13 @@
 }
 
 @theme inline {
-	--color-background: var(--background);
-	--color-foreground: var(--foreground);
 	--font-sans: 'Plus Jakarta Sans', sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
-	:root {
-		--background: #fafafa;
-		--foreground: #212121;
-	}
-}
-
+html,
 body {
-	background: var(--background);
-	color: var(--foreground);
 	font-family: 'Plus Jakarta Sans', sans-serif;
+	margin: 0;
+	padding: 0;
+	font-style: normal;
 }
