--- a/src/app/universal-styles/profile-header.css
+++ b/src/app/universal-styles/profile-header.css
@@ -1,7 +1,7 @@
 @reference "tailwindcss";
 
 .profile-header {
-	@apply font-sans tracking-wide flex flex-col w-full min-h-[30vh] justify-center items-center space-y-4 px-4 py-6;
+	@apply font-sans tracking-wide flex flex-col w-full h-[45vh] justify-center items-center space-y-4 px-4 py-6;
 }
 
 .profile-header.resident {
