Rescuer Page is done for all 5 pages

--- a/src/app/resident-styles/profile/resident-profile.css
+++ b/src/app/resident-styles/profile/resident-profile.css
@@ -1,5 +1,5 @@
 @reference "tailwindcss";
 
 .resident-profile-container {
-	@apply fixed top-[45vh] left-0 w-full py-8 px-4;
+	@apply fixed top-[45vh] md:top-[40vh] left-0 w-full py-8 md:py-5 px-4;
 }
