--- a/src/app/rescuer-styles/news/rescuer-news.css
+++ b/src/app/rescuer-styles/news/rescuer-news.css
@@ -1,6 +1,6 @@
 @reference "tailwindcss";
 
-.resident-news-container {
+.rescuer-news-container {
 	@apply fixed top-[18vh] left-0 w-full h-[72vh] p-6 flex flex-col gap-5 md:flex-row md:gap-5;
 }
 
