--- a/src/app/universal-styles/profile-header.css
+++ b/src/app/universal-styles/profile-header.css
@@ -1,31 +1,31 @@
 @reference "tailwindcss";
 
 .profile-header {
-	@apply font-sans tracking-wide flex flex-col w-full h-[45vh] justify-center items-center space-y-4 px-4 py-6;
+	@apply font-sans tracking-wide flex flex-col w-full h-[45vh] md:h-[40vh] justify-center items-center space-y-4 px-4 py-6;
 }
 
 .profile-header.resident {
-	@apply bg-[var(--color-red)] text-[var(--color-white)];
+	@apply bg-[var(--color-main)] text-[var(--color-white)];
 }
 
 .profile-header.rescuer {
-	@apply bg-[var(--color-blue)] text-[var(--color-white)];
+	@apply bg-[var(--color-main)] text-[var(--color-white)];
 }
 
 .header-title {
-	@apply flex flex-col justify-center items-center pb-3;
+	@apply flex flex-col justify-center items-center pb-3 md:pb-0;
 }
 
 .header-title h2 {
-	@apply text-4xl font-semibold;
+	@apply text-4xl md:text-2xl font-semibold;
 }
 
 .header-title p {
-	@apply text-lg first-letter:uppercase;
+	@apply text-lg md:text-xs first-letter:uppercase;
 }
 
 .profile-picture img {
-	@apply w-[110px] h-[110px] rounded-full object-cover border-3 border-white shadow-lg;
+	@apply w-[110px] h-[110px] md:w-[50px] md:h-[50px] rounded-full object-cover border-3 border-white shadow-lg;
 }
 
 .user-information {
@@ -33,13 +33,13 @@
 }
 
 .user-information h5 {
-	@apply font-normal text-xl;
+	@apply font-normal md:text-xs text-xl;
 }
 
 .user-information p {
-	@apply font-light text-[16px];
+	@apply font-light md:text-xs text-[16px];
 }
 
 .user-id {
-	@apply flex justify-center items-center space-x-2;
+	@apply flex justify-center items-center space-x-2 md:text-xs;
 }
