--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,3 +49,8 @@ body {
 	padding: 0;
 	font-style: normal;
 }
+
+.input {
+	@apply border border-gray-300 rounded-lg px-4 py-2 w-full 
+         focus:outline-none focus:ring-2 focus:ring-blue-500;
+}
